[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/player/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/player/MoveComponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player/InputComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/player/ViewComponent.tscn" type="PackedScene" id=4]

[node name="Player" type="Spatial"]
script = ExtResource( 1 )

[node name="InputComponent" parent="." instance=ExtResource( 3 )]

[node name="MoveComponent" parent="." instance=ExtResource( 2 )]

[node name="ViewComponent" parent="." instance=ExtResource( 4 )]
